Add react runtime automatic

--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,5 @@
 {
-  "presets": ["@babel/env", "@babel/preset-react"]
+  "presets": ["@babel/env", 
+    ["@babel/preset-react", {"runtime": "automatic"}]
+  ]
 }
