--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
+    "start": "react-scripts start",
     "build": "rollup -c",
     "build-watch": "rollup -c -w",
     "start-playground": "cd playground && yarn start",
