--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@rollup/plugin-babel": "^5.3.1",
     "rollup": "^2.75.6",
     "rollup-plugin-delete": "^2.0.0",
+    "rollup-plugin-import-css": "^3.0.3",
     "rollup-plugin-peer-deps-external": "^2.2.4"
   },
   "peerDependencies": {
