--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@babel/preset-react": "^7.17.12",
     "@rollup/plugin-babel": "^5.3.1",
     "postcss": "^8.4.14",
+    "postcss-modules": "^4.3.1",
     "rollup": "^2.75.6",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-import-css": "^3.0.3",
