--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-import-css": "^3.0.3",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-postcss": "^4.0.2"
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-styles": "^4.0.0"
   },
   "peerDependencies": {
     "react": "^18.1.0",
