--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,12 @@
     "target": "es5",
     "lib": ["es6", "dom", "es2016", "es2017"],
     "sourceMap": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "globals.d.ts"],
   "exclude": [
     "node_modules",
     "build",
