--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "classnames": "^2.3.1",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.0"
