--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
+    "rooks": "^5.11.8",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.0"
   },
