--- a/package.json
+++ b/package.json
@@ -6,21 +6,20 @@
   "module": "dist/index.esm.js",
   "source": "src/index.tsx",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^28.1.2",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
-    "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
-    "rooks": "^5.11.8",
     "typescript": "^4.7.4",
+    "use-http": "^1.0.26",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -30,7 +29,11 @@
     "start-playground": "cd playground && yarn start",
     "start-playground-next": "cd playground-next && yarn dev",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "build-test": "npx tsc --jsx preserve -t es2020 --outDir build-test --noEmit false",
+    "test": "jest ./src/tests --detectOpenHandles",
+    "yarn-duplicate": "yarn-deduplicate yarn.lock --packages @types/react yarn.lock",
+    "build-and-test": "yarn build-test && yarn test"
   },
   "eslintConfig": {
     "extends": [
@@ -55,6 +58,7 @@
     "@babel/core": "^7.18.2",
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
+    "@babel/preset-typescript": "^7.18.6",
     "@rollup/plugin-babel": "^5.3.1",
     "@storybook/addon-actions": "^6.5.9",
     "@storybook/addon-essentials": "^6.5.9",
@@ -64,13 +68,17 @@
     "@storybook/manager-webpack5": "^6.5.9",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
+    "@types/webgl2": "^0.0.6",
+    "babel-jest": "^28.1.2",
     "babel-loader": "^8.2.5",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^28.1.2",
+    "msw": "^0.43.1",
     "rollup": "^2.75.6",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-styles": "^4.0.0",
-    "rollup-plugin-typescript2": "^0.32.1",
-    "tslib": "^2.4.0"
+    "rollup-plugin-typescript2": "^0.32.1"
   },
   "peerDependencies": {
     "react": "^18.1.0",
