--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@rollup/plugin-babel": "^5.3.1",
     "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-controls": "^6.5.10",
     "@storybook/addon-essentials": "^6.5.9",
     "@storybook/addon-interactions": "^6.5.9",
     "@storybook/addon-links": "^6.5.9",
