--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mediumpostscard",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.4",
+  "description": "React Isomorphic library that show your Medium articles.",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "source": "src/index.tsx",
@@ -82,5 +82,30 @@
   "peerDependencies": {
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/david-fernando/medium-posts-card.git",
+    "directory": "packages/name"
+  },
+  "bugs": {
+    "url": "https://github.com/david-fernando/medium-posts-card/issues"
+  },
+  "homepage": "https://github.com/david-fernando/medium-posts-card",
+  "keywords": [
+    "Medium Posts Card",
+    "MediumPostsCard",
+    "Medium Post Card",
+    "Medium React Card",
+    "React",
+    "React JS",
+    "React library",
+    "ReactLibrary",
+    "BibliotecaReact",
+    "JavaScript",
+    "JavaScript library",
+    "Biblioteca JavaScript"
+  ],
+  "author": "davidfernando",
+  "license": "MIT"
 }
