--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
+    "nth-check": "2.0.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
