--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "^5.0.1",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
+    "trim": "0.0.3",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.0"
   },
