--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "trim": "0.0.3",
+    "trim-newlines": "3.0.1",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.0"
   },
