--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@xmldom/xmldom": "0.7.6",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "glob-parent": "5.1.2",
