--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "start": "react-scripts start",
     "build": "rollup -c",
     "build-watch": "rollup -c -w",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "test": "jest ./src/tests --detectOpenHandles",
     "build-and-test": "yarn build && yarn test"
   },
@@ -65,16 +65,15 @@
     "@babel/preset-react": "^7.17.12",
     "@babel/preset-typescript": "^7.18.6",
     "@rollup/plugin-babel": "^5.3.1",
-    "@storybook/addon-actions": "^6.5.10",
-    "@storybook/addon-controls": "^6.5.10",
-    "@storybook/addon-essentials": "^6.5.10",
-    "@storybook/addon-interactions": "^6.5.10",
-    "@storybook/addon-links": "^6.5.10",
-    "@storybook/builder-webpack5": "^6.5.10",
-    "@storybook/manager-webpack5": "^6.5.10",
-    "@storybook/preset-create-react-app": "^4.1.2",
-    "@storybook/react": "^6.5.10",
-    "@storybook/testing-library": "^0.0.13",
+    "@storybook/addon-actions": "^7.0.26",
+    "@storybook/addon-controls": "^7.0.26",
+    "@storybook/addon-essentials": "^7.0.26",
+    "@storybook/addon-interactions": "^7.0.26",
+    "@storybook/addon-links": "^7.0.26",
+    "@storybook/preset-create-react-app": "^7.0.26",
+    "@storybook/react": "^7.0.26",
+    "@storybook/react-webpack5": "^7.0.26",
+    "@storybook/testing-library": "^0.2.0",
     "@types/webgl2": "^0.0.6",
     "babel-jest": "^28.1.2",
     "babel-loader": "^8.2.5",
@@ -85,7 +84,8 @@
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-styles": "^4.0.0",
-    "rollup-plugin-typescript2": "^0.32.1"
+    "rollup-plugin-typescript2": "^0.32.1",
+    "storybook": "^7.0.26"
   },
   "peerDependencies": {
     "react": "^18.1.0",
