--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "^5.0.1",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
+    "semver": "7.5.2",
     "trim": "0.0.3",
     "trim-newlines": "3.0.1",
     "typescript": "^4.7.4",
